crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.todo-object-expression-set-syntax/error.txt
Found 1 error:

Todo: (BuildHIR::lowerExpression) Handle set functions in ObjectExpression

error.todo-object-expression-set-syntax.ts:4:4
  2 |   let value;
  3 |   const object = {
> 4 |     set value(v) {
    |     ^^^^^^^^^^^^^^
> 5 |       value = v;
    | ^^^^^^^^^^^^^^^^
> 6 |     },
    | ^^^^^^ (BuildHIR::lowerExpression) Handle set functions in ObjectExpression
  7 |   };
  8 |   object.value = props.value;
  9 |   return <div>{value}</div>;
